[profile.release]
panic = "unwind"

[workspace]
members = [
    "pallets/*",
    "primitives/*",
]

[workspace.authors]
name = "Freeverse"

[workspace.dependencies]
parity-scale-codec = { version = "3.1.5", default-features = false }
hash-db = { version = "0.16.0", default-features = false }
impl-trait-for-tuples = "0.2.2"
num-traits = { version = "0.2", default-features = false }
scale-info = { version = "2.9.0", default-features = false, features = ["derive", "serde"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
trie-db = { version = "0.27.1", default-features = false }
hex = "0.4"

finality-grandpa = { version = "0.16.2", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false, features = ["serde"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false, features = ["serde"] }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }

bp-runtime = { path = "./primitives/runtime", default-features = false }
bp-header-chain = { path = "./primitives/header-chain", default-features = false }
bp-messages = { path = "./primitives/messages", default-features = false }
bp-relayers = { path = "./primitives/relayers", default-features = false }

pallet-bridge-grandpa = { path = "./pallets/grandpa", default-features = false }
pallet-bridge-messages = { path = "./pallets/messages", default-features = false }
pallet-bridge-relayers = { path = "./pallets/relayers", default-features = false }