[package]
name = "bridge-runtime-common"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/parity-bridges-common/"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
parity-scale-codec = { workspace = true }
hash-db = { workspace = true }
log = { workspace = true }
scale-info = { workspace = true }
static_assertions = { workspace = true, optional = true }

# Bridge dependencies

bp-header-chain = { workspace = true }
bp-messages = { workspace = true }
bp-parachains = { workspace = true }
bp-polkadot-core = { workspace = true }
bp-relayers = { workspace = true }
bp-runtime = { workspace = true }
pallet-bridge-grandpa = { workspace = true }
pallet-bridge-messages = { workspace = true }
pallet-bridge-parachains = { workspace = true }
pallet-bridge-relayers = { workspace = true }

# Substrate dependencies

frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-utility = { workspace = true }
sp-api = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-trie = { workspace = true }

# Polkadot dependencies
xcm = { workspace = true }
xcm-builder = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true }
pallet-bridge-messages = { workspace = true, features = ["std", "test-helpers"] }

[features]
default = ["std"]
std = [
	"bp-header-chain/std",
	"bp-messages/std",
	"bp-parachains/std",
	"bp-polkadot-core/std",
	"bp-runtime/std",
	"parity-scale-codec/std",
	"frame-support/std",
	"frame-system/std",
	"hash-db/std",
	"log/std",
	"pallet-bridge-grandpa/std",
	"pallet-bridge-messages/std",
	"pallet-bridge-parachains/std",
	"pallet-bridge-relayers/std",
	"pallet-transaction-payment/std",
	"pallet-utility/std",
	"scale-info/std",
	"sp-api/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-trie/std",
	"xcm/std",
	"xcm-builder/std",
	"bp-relayers/std",
]
runtime-benchmarks = [
	"pallet-bridge-grandpa/runtime-benchmarks",
	"pallet-bridge-messages/runtime-benchmarks",
	"pallet-bridge-messages/test-helpers",
	"pallet-bridge-parachains/runtime-benchmarks",
	"pallet-bridge-relayers/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]
integrity-test = [
	"static_assertions",
]
