[package]
name = "pallet-bridge-grandpa"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec = { workspace = true }
finality-grandpa = { workspace = true }
scale-info = { workspace = true }

# Bridge Dependencies

bp-runtime = { workspace = true }
bp-header-chain = { workspace = true }

# Substrate Dependencies

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-trie = { workspace = true }

# Optional Benchmarking Dependencies
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
	"bp-header-chain/std",
	"bp-runtime/std",
	"parity-scale-codec/std",
	"finality-grandpa/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking",
	"scale-info/std",
	"sp-consensus-grandpa/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-trie/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
