[package]
name = "bp-bridge-hub-cumulus"
description = "Primitives of BridgeHubRococo parachain runtime."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
# Bridge Dependencies

bp-polkadot-core = { workspace = true }
bp-messages = { workspace = true }
bp-runtime = { workspace = true }

# Substrate Based Dependencies

frame-system = { workspace = true }
frame-support = { workspace = true }
sp-api = { workspace = true }
sp-std = { workspace = true }

# Polkadot Dependencies
polkadot-primitives = { workspace = true }

[features]
default = ["std"]
std = [
	"bp-polkadot-core/std",
	"bp-messages/std",
	"bp-runtime/std",
	"frame-system/std",
	"frame-support/std",
	"sp-api/std",
	"sp-std/std",
	"polkadot-primitives/std",
]
