[package]
name = "bp-evochain"
description = "Primitives of Evochain runtime."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]

fixed-hash = { workspace = true }
hash256-std-hasher = { workspace = true }
impl-codec = { workspace = true }
impl-serde = { workspace = true }
parity-util-mem = { workspace = true, features = ["primitive-types"] }
scale-info = { workspace = true, features = ["derive", "serde"] }
serde = { workspace = true, features = ["alloc", "derive"], optional = true }

# Bridge Dependencies

bp-beefy = { workspace = true }
bp-header-chain = { workspace = true }
bp-messages = { workspace = true }
bp-runtime = { workspace = true }

# Substrate Based Dependencies

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-api = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-trie = { workspace = true }

# evochain
ethereum-account = { workspace = true }

[features]
default = ["std"]
std = [
	"bp-beefy/std",
	"bp-header-chain/std",
	"bp-messages/std",
	"bp-runtime/std",
	"fixed-hash/std",
	"frame-support/std",
	"frame-system/std",
	"hash256-std-hasher/std",
	"impl-codec/std",
	"impl-serde/std",
	"parity-util-mem/std",
	"scale-info/std",
	"serde/std",
	"sp-api/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-trie/std",
	"ethereum-account/std",
]
