[package]
name = "bp-messages"
description = "Primitives of messages module."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true, features = ["bit-vec", "derive", "serde"] }
serde = { workspace = true, features = ["alloc", "derive"] }

# Bridge dependencies

bp-runtime = { workspace = true }
bp-header-chain = { workspace = true }

# Substrate Dependencies

frame-support = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"bp-runtime/std",
	"bp-header-chain/std",
	"parity-scale-codec/std",
	"frame-support/std",
	"scale-info/std",
	"serde/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std"
]
