[package]
name = "bp-polkadot-core"
description = "Primitives of Polkadot-like runtime."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
parity-scale-codec = { workspace = true }
parity-util-mem = { workspace = true, optional = true }
scale-info = { workspace = true }
serde = { workspace = true }

# Bridge Dependencies

bp-messages = { workspace = true }
bp-runtime = { workspace = true }

# Substrate Based Dependencies

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
hex = { workspace = true }

[features]
default = ["std"]
std = [
	"bp-messages/std",
	"bp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"parity-util-mem",
	"scale-info/std",
	"serde/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
