[package]
name = "bp-runtime"
description = "Primitives that may be used at (bridges) runtime level."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
parity-scale-codec = { workspace = true }
hash-db = { workspace = true }
impl-trait-for-tuples = { workspace = true }
num-traits = { workspace = true, default-features = false }
scale-info = { workspace = true }
serde = { workspace = true }

# Substrate Dependencies

frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false, features = ["serde"] }
sp-state-machine = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-trie = { workspace = true, default-features = false }
trie-db = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"frame-support/std",
	"frame-system/std",
	"hash-db/std",
	"num-traits/std",
	"scale-info/std",
	"serde/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-state-machine/std",
	"sp-trie/std",
	"trie-db/std",
]
test-helpers = []
