[package]
name = "relay-substrate-client"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
async-std = { workspace = true, features = ["attributes"] }
async-trait = { workspace = true }
parity-scale-codec = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
quick_cache = { workspace = true }
rand = { workspace = true }
scale-info = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
thiserror = { workspace = true }

# Bridge dependencies

bp-header-chain = { workspace = true }
bp-messages = { workspace = true }
bp-polkadot-core = { workspace = true }
bp-runtime = { workspace = true }
pallet-bridge-messages = { workspace = true }
finality-relay = { workspace = true }
relay-utils = { workspace = true }

# Substrate Dependencies

frame-support = { workspace = true, default-features = true }
frame-system = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }
pallet-transaction-payment = { workspace = true, default-features = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true, default-features = true}
pallet-utility = { workspace = true, default-features = true }
sc-chain-spec = { workspace = true, default-features = true }
sc-rpc-api = { workspace = true, default-features = true }
sc-transaction-pool-api = { workspace = true, default-features = true }
sp-consensus-grandpa = { workspace = true, default-features = true }
sp-core = { workspace = true,default-features = true }
sp-rpc = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-std = { workspace = true, default-features = true }
sp-trie = { workspace = true, default-features = true }
sp-version = { workspace = true, default-features = true }

# Polkadot Dependencies

xcm = { workspace = true }

[features]
default = []
test-helpers = []
