[package]
name = "relay-substrate-client"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
async-std = { workspace = true, features = ["attributes"] }
async-trait = { workspace = true }
parity-scale-codec = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
quick_cache = { workspace = true }
rand = { workspace = true }
scale-info = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
thiserror = { workspace = true }

# Bridge dependencies

bp-header-chain = { workspace = true }
bp-messages = { workspace = true }
bp-polkadot-core = { workspace = true }
bp-runtime = { workspace = true }
pallet-bridge-messages = { workspace = true }
finality-relay = { workspace = true }
relay-utils = { workspace = true }

# Substrate Dependencies

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sc-chain-spec = { workspace = true }
sc-rpc-api = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-consensus-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-rpc = { workspace = true }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-version = { workspace = true }

# Polkadot Dependencies

xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }

[features]
default = []
test-helpers = []
