[package]
name = "finality-relay"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Finality proofs relay"

[dependencies]
async-std = { workspace = true }
async-trait = { workspace = true }
backoff = { workspace = true }
bp-header-chain = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
relay-utils = { workspace = true }

[dev-dependencies]
parking_lot = { workspace = true }
