[package]
name = "parachains-relay"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
async-std = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
relay-utils = { workspace = true }

# Bridge dependencies

bp-polkadot-core = { workspace = true }
relay-substrate-client = { workspace = true }

[dev-dependencies]
parity-scale-codec = { workspace = true }
relay-substrate-client = { workspace = true, features = ["test-helpers"] }
sp-core = { workspace = true }
