[package]
name = "relay-utils"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
ansi_term = { workspace = true }
anyhow = { workspace = true }
async-std = { workspace = true }
async-trait = { workspace = true }
backoff = { workspace = true }
isahc = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
jsonpath_lib = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

# Bridge dependencies

bp-runtime = { workspace = true }

# Substrate dependencies

sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
